--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -2,16 +2,43 @@
 
 {% block header %}
     <link href="../static/css/agency.min.css" rel="stylesheet">
+    <link href="../static/css/sidebar.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
     <header>
-        <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">We Perform Analysis on Business Meetings</div>
-                <div class="intro-heading">Welcome To Synalyze!</div>
-                <a href="{{ url_for('record') }}" class="page-scroll btn btn-xl">Record</a>
+        <div id="wrapper">
+
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    Cached Recordings
+                </li>
+                {% for recording in recordings %}
+                <li class="sidebar-brand">
+                    <a href="{{ url_for('report', recordid=recording) }}" class="page-scroll btn btn-xl">
+                        {{ recording }}
+                    </a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="intro-text">
+                        <div class="intro-lead-in">We Perform Analysis on Business Meetings</div>
+                        <div class="intro-heading">Welcome To Synalyze!</div>
+                        <a href="{{ url_for('record') }}" class="page-scroll btn btn-xl">Record</a>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
+
     </header>
 {% endblock %}
