Added meeting audio to report

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,8 @@
         <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-        
+        <link href="../static/css/sidebar.css" rel="stylesheet">
+
         <style>
             .sandwich {
                 width: 35px;
@@ -58,7 +59,6 @@
 
         {% block content %} {% endblock %}
 
-        <!-- Menu Toggle Script -->
         <script>
         $("#menu-toggle").click(function(e) {
             e.preventDefault();
