--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,35 +1,40 @@
 {% extends "base.html" %}
 
 {% block header %}
-<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
 <link href="../static/css/login.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-<header>
-  <div class="container">
+    <header>
+        <div id="wrapper">
 
-      <div class="container text-center">
-          <form class="form-signin" data-ember-action="2">
-              <h2 class="form-signin-heading">Sign in</h2>
-              <p>
-                  <a class="btn btn-primary social-login-btn social-facebook" href="/authorize/facebook"><i class="fa fa-facebook"></i></a>
-                <a class="btn btn-primary social-login-btn social-google" href="/authorize/google"><i class="fa fa-google-plus"></i></a>
-              </p>
-              <br><br>
-                  
-              <input id="ember360" class="ember-view ember-text-field form-control login-input" placeholder="Email Address" type="text">
-              <input id="ember361" class="ember-view ember-text-field form-control login-input-pass" placeholder="Password" type="password">
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="intro-text">
+                        <div class="intro-lead-in">Welcome to Synalyze!</div>
+                        
+                        <form class="form-signin" data-ember-action="2">
+                            <h2 class="form-signin-heading">Sign in</h2>
+                            <p>
+                                <a class="btn btn-primary social-login-btn social-facebook" href="/authorize/facebook"><i class="fa fa-facebook"></i></a>
+                              <a class="btn btn-primary social-login-btn social-google" href="/authorize/google"><i class="fa fa-google-plus"></i></a>
+                            </p>
+                            <br><br>
+                                
+                            <input id="ember360" class="ember-view ember-text-field form-control login-input" placeholder="Email Address" type="text">
+                            <input id="ember361" class="ember-view ember-text-field form-control login-input-pass" placeholder="Password" type="password">
 
-              <script id="metamorph-22-start" type="text/x-placeholder"></script><script id="metamorph-22-end" type="text/x-placeholder"></script>
+                            <script id="metamorph-22-start" type="text/x-placeholder"></script><script id="metamorph-22-end" type="text/x-placeholder"></script>
 
-              <button class="btn btn-lg btn-primary btn-block btn-center" type="submit" data-bindattr-3="3">Sign in</button>
-            <br>
-            <small class="create-account text-muted">Dont have a social network account? 
-            <br>
-            <button id="ember363" class="ember-view btn btn-sm btn-default"> Sign Up </button> </small>
-          </form>
-      </div>
-  </div>
-</header>
+                            <button class="btn btn-lg btn-primary btn-block btn-center" type="submit" data-bindattr-3="3">Sign in</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    </header>
 {% endblock content %}
