--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,9 +16,10 @@
                         <div class="intro-lead-in">Welcome to Synalyze!</div>
                         
                         <form class="form-signin" data-ember-action="2">
-                            <h2 class="form-signin-heading">Sign in</h2>
                             <p>
-                                <a class="btn btn-primary social-login-btn social-facebook" href="/authorize/facebook"><i class="fa fa-facebook"></i></a>
+                                <a class="btn btn-primary social-login-btn" href="/authorize/facebook">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </a>
                               <a class="btn btn-primary social-login-btn social-google" href="/authorize/google"><i class="fa fa-google-plus"></i></a>
                             </p>
                             <br><br>
