--- a/app/templates/record.html
+++ b/app/templates/record.html
@@ -4,6 +4,24 @@
 <link rel="stylesheet" href="../static/css/loading.css">
 {% endblock %}
 
+{% block sidebar %}
+{% endblock %}
+
+{% block navbar %}
+<nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
+    <div class="container col-md-12">
+        <div class="navbar-header page-scroll col-md-6 col-sm-6">
+            <a class="navbar-brand page-scroll" href="{{ url_for('landing') }}">Synalyze</a>
+        </div>
+
+        <div class="navbar-header page-scroll col-md-6 col-sm-6">
+            <a class="navbar-brand page-scroll pull-right" href="{{ url_for('logout') }}">Logout</a>
+        </div>
+    </div>
+</nav>
+{% endblock %}
+
+
 {% block content %}
 <section>
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
