--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,12 +9,12 @@
 
 {% block navbar %}
 <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
-    <div class="container col-md-12">
-        <div class="navbar-header page-scroll col-md-6 col-sm-6">
+    <div class="container col-xs-12">
+        <div class="navbar-header page-scroll col-xs-6">
             <a class="navbar-brand page-scroll" href="{{ url_for('landing') }}">Synalyze</a>
         </div>
 
-        <div class="navbar-header page-scroll col-md-6 col-sm-6">
+        <div class="navbar-header page-scroll col-xs-6">
             <a class="navbar-brand page-scroll pull-right" href="{{ url_for('logout') }}">Logout</a>
         </div>
     </div>
