--- a/app/templates/record.html
+++ b/app/templates/record.html
@@ -10,11 +10,11 @@
 {% block navbar %}
 <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
     <div class="container col-md-12">
-        <div class="navbar-header page-scroll col-md-6 col-sm-6">
+        <div class="navbar-header page-scroll col-xs-6">
             <a class="navbar-brand page-scroll" href="{{ url_for('landing') }}">Synalyze</a>
         </div>
 
-        <div class="navbar-header page-scroll col-md-6 col-sm-6">
+        <div class="navbar-header page-scroll col-xs-6">
             <a class="navbar-brand page-scroll pull-right" href="{{ url_for('logout') }}">Logout</a>
         </div>
     </div>
@@ -43,8 +43,8 @@
     <div class="container">
         <div class="row">
             <div class="main_home text-center">
-                <div class="col-md-12">
-                    <div class="col-md-6 col-md-offset-3" id="controls">
+                <div class="col-xs-12">
+                    <div class="col-xs-6 col-xs-offset-3" id="controls">
                         <button type="button" class="btn btn-warning" id="stop">Analyze</button>
                     </div>
                 </div>
