--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -17,7 +17,7 @@
 {% block sidebar %}
 <!-- Sidebar -->
 <div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
+    <ul class="sidebar-nav" id="sidebar-contents">
         <li class="sidebar-brand">
             Cached Recordings
         </li>
@@ -34,8 +34,8 @@
 
 {% block navbar %}
 <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
-    <div class="container col-md-12">
-        <div class="navbar-header page-scroll col-md-4 col-sm-4">
+    <div class="container col-xs-12">
+        <div class="navbar-header page-scroll col-xs-4">
             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">
                 <div class="sandwich"></div>
                 <div class="sandwich"></div>
@@ -43,11 +43,11 @@
             </a>
         </div>
 
-        <div class="navbar-header page-scroll col-md-4 col-sm-4">
+        <div class="navbar-header page-scroll col-xs-4">
             <a class="navbar-brand page-scroll" href="{{ url_for('landing') }}">Synalyze</a>
         </div>
 
-        <div class="navbar-header page-scroll col-md-4 col-sm-4">
+        <div class="navbar-header page-scroll col-xs-4">
             <a class="navbar-brand page-scroll pull-right" href="{{ url_for('logout') }}">Logout</a>
         </div>
     </div>
