--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -61,8 +61,23 @@
 </div>
 
 <audio controls>
-	            <source src="wav" type="audio/wav">
-	        </audio>
+	<source src="wav" type="audio/wav">
+</audio>
+
+<table style="border-collapse: separate;border-spacing: 10px;">
+	<tr>
+		<td>Speaker ID</td>
+		<td>Name</td>
+		<td>Refernce Clip</td>
+	</tr>
+	{% for i in range(data["overall_speaker"]|length) %}
+	<tr>
+		<td>{{  data["overall_speaker"][i]  }}</td>
+		<td><input type="text" id="user-{{ i }}"/></td>
+		<td><audio controls> <source src="wav" type="audio/wav"> </audio></td>
+	</tr>
+	{% endfor %}
+</table>
 
 <h2>Main Ideas</h2>
 <ul style="list-style: none;">
@@ -84,7 +99,7 @@
 	</tr>
 	{% for i in range(data["overall_speaker"]|length) %}
 	<tr>
-		<td>{{  data["overall_speaker"][i]  }}</td>
+		<td class="user-{{ i }}">{{  data["overall_speaker"][i]  }}</td>
 		<td>{{ data["overall_durations"][i] }}</td>
 	</tr>
 	{% endfor %}
@@ -94,7 +109,7 @@
 <table style="border-collapse: separate;border-spacing: 10px;">
 	{% for i in range(data["speakers"]|length) %}
 	<tr style="vertical-align:top;">
-		<td>{{ data["speakers"][i] }}</td>
+		<td class="user-{{ i }}">{{ data["speakers"][i] }}</td>
 		<td>{{ data["start_times"][i] }}</td>
 		<td><div class="circle_green"></td>
 		<td><p>({{ '%.02f' % data["durations"][i] }} s): {{ data["text"][i] }} </p></td>
@@ -107,27 +122,39 @@
 	
 	<script>
 		var graph = new Rickshaw.Graph( {
-element: document.getElementById("chart"),
-width: document.getElementById('container').offsetWidth,
-height: 200,
-renderer: 'line',
-min: -.01,
-interpolation: 'basis',
-series: 
-[{
-	data: [ {{ data["series1_str"] }} ],
-	color: '#ff0000'
-}, 
-{
-	data: [ {{ data["series2_str"] }} ],
-	color: '#0000ff'
-}, 
-{
-	data: [ {{ data["series3_str"] }} ],
-	color: '#00ff00'
-}]
-		} );
+			element: document.getElementById("chart"),
+			width: document.getElementById('container').offsetWidth,
+			height: 200,
+			renderer: 'line',
+			min: -.01,
+			interpolation: 'basis',
+			series: 
+				[{
+					data: [ {{ data["series1_str"] }} ],
+					color: '#ff0000'
+				}, 
+				{
+					data: [ {{ data["series2_str"] }} ],
+					color: '#0000ff'
+				}, 
+				{
+					data: [ {{ data["series3_str"] }} ],
+					color: '#00ff00'
+				}]
+			});
 		graph.render();
 	</script>
 	
+	<script type="text/javascript">
+		{% for i in range(data["overall_speaker"]|length) %}
+			var curUser = 'user-{{ i }}';
+		    var input= document.getElementById(curUser);
+		    var elements= document.getElementsByClassName(curUser);
+		    input.onchange=input.onkeyup= function() {
+		        for (i = 0; i < elements.length; i++) {
+		        	elements[i].innerHTML = input.value;
+		        }
+		    };
+		{% endfor %}
+	</script>
 {% endblock %}
