--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -68,16 +68,39 @@
 	<tr>
 		<td class="col-xs-4">Speaker ID</td>
 		<td class="col-xs-4">Name</td>
-		<td class="col-xs-4">Refernce Clip</td>
+		<td class="col-xs-4">Reference Clip</td>
 	</tr>
 	{% for i in range(data["overall_speaker"]|length) %}
 	<tr>
+		<div class="modal fade" id="usermodal-{{ i }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h4 class="modal-title user-{{ i }}">
+		        	{{  data["overall_speaker"][i]  }}
+		        </h4>
+		      </div>
+		      <div class="modal-body">
+		        {{ i }}
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
 		<td class="col-xs-4">{{  data["overall_speaker"][i]  }}</td>
 		<td class="col-xs-4"><input type="text" id="user-{{ i }}"/></td>
-		<td class="col-xs-4"><audio controls> <source src="wav" type="audio/wav"> </audio></td>
+		<td class="col-xs-4">
+			<a type="button" class="btn" data-toggle="modal" data-target="#usermodal-{{ i }}"> 
+				Details 
+			</a>
+		</td>
 	</tr>
 	{% endfor %}
 </table>
+
+<iframe id="contribution-graph" scrolling="no" style="border:none;" seamless="seamless" 
+	src="" height="525" width="100%">
+</iframe>
 
 <h2>Main Ideas</h2>
 <ul style="list-style: none;">
@@ -149,12 +172,17 @@
 		{% for i in range(data["overall_speaker"]|length) %}
 			var curUser = 'user-{{ i }}';
 		    var input= document.getElementById(curUser);
-		    var elements= document.getElementsByClassName(curUser);
+		    var elements = document.getElementsByClassName(curUser);
 		    input.onchange=input.onkeyup= function() {
 		        for (i = 0; i < elements.length; i++) {
 		        	elements[i].innerHTML = input.value;
 		        }
 		    };
 		{% endfor %}
+	</script>
+
+	<script>
+		iframe = document.getElementById("contribution-graph"); 
+		iframe.src = "{{ url }}.embed";
 	</script>
 {% endblock %}
