--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -11,6 +11,7 @@
 		}
 	</style>
 
+	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.6.0/rickshaw.min.css">
 {% endblock %}
 
@@ -98,17 +99,18 @@
 	{% endfor %}
 </table>
 
-<iframe id="contribution-graph" scrolling="no" style="border:none;" seamless="seamless" 
-	src="" height="525" width="100%">
-</iframe>
+<hr>
+<h2>Contributions</h2>
+{{ div | safe }}
 
+<hr>
+<h2>Analysis</h2>
 <div class="col-xs-12">
 	<div id="container" class="col-xs-8">
 		<div id="chart"></div>
 	</div>
 
 	<div class="col-xs-4">
-		<h2>Main Ideas</h2>
 		<ul style="list-style: none;">
 			{% for idea in data["ideas"] %}
 			<li>
@@ -171,10 +173,5 @@
 		        }
 		    };
 		{% endfor %}
-	</script>
-
-	<script>
-		iframe = document.getElementById("contribution-graph"); 
-		iframe.src = "{{ url }}.embed";
 	</script>
 {% endblock %}
