--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -44,8 +44,18 @@
 </nav>
 
 <div class="intro-text">
-<div class="intro-lead-in">We Perform Analysis on Business Meetings</div>
-<div class="intro-heading">Welcome To Synalyze!</div>
-<a href="{{ url_for('record') }}" class="page-scroll btn btn-xl">Record</a>
-                    </div>
+    <div class="intro-lead-in">We Perform Analysis on Business Meetings</div>
+    <div class="intro-heading">Welcome To Synalyze!</div>
+    <a href="{{ url_for('record') }}" class="page-scroll btn btn-xl">Record</a>
+    
+    <br /><br />
+    <form action="upload" method="post" enctype="multipart/form-data">
+        <div class="col-xs-12">
+            <input class="btn btn-info col-xs-offset-3 col-xs-3" type="file" name="file">
+            <input class="btn btn-success col-xs-3" type="submit" value="Upload">
+        </div>
+    </form>
+
+</div>
+
 {% endblock content %}
